--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-csv": "^2.2.2",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "websicall": "file:"
