--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
+    "socket.io-client": "^4.7.5",
     "websicall": "file:"
   },
   "devDependencies": {
