--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-VITE_API_URL = https://192.168.1.80:3000/api/
-VITE_API_URL_CHAT =https://192.168.1.80:3000
+# DEV
+# VITE_API_URL = https://192.168.1.80:3000/api/
+# VITE_API_URL_CHAT =https://192.168.1.80:3000
+#PROD
+VITE_API_URL = https://172.20.2.57:3000/api/
+VITE_API_URL_CHAT =https://172.20.2.57:3000
